Fixed overflow in review rating headers, by making words lowercase and bold

--- a/site/src/component/Review/Review.scss
+++ b/site/src/component/Review/Review.scss
@@ -29,6 +29,7 @@
 .rating-label {
   line-height: 1rem;
   font-size: 1rem;
+  font-weight: bold;
 }
 .rating {
   margin: 1vh 0;
